fix button spacing

--- a/src/stylesheets/shared/buttons.sass
+++ b/src/stylesheets/shared/buttons.sass
@@ -19,7 +19,7 @@
     weight: $font-weight-bold
   letter-spacing: .5px
   line-height: $line-height-base
-  padding: $m-sm $m-base
+  padding: $m-sm $m-md
   text:
     decoration: none
     transform: uppercase
